--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -87,10 +87,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Load MongoDB binary cache
         id: cache-mongodb-binaries
         uses: actions/cache@v4
@@ -102,17 +102,24 @@ jobs:
       - name: Build
         run: yarn build
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@0a51e81a6baff2acad3ee88f4121c589c73d0f0e # v4.2.0
-        with:
-          # dry_run: true
-          # "conventional-changelog-writer" is exactly installed as "cycjimmy/semantic-release-action" depends on 8.0.0, which causes errors
-          # plugins included in semantic-release by default:
-          # @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/npm @semantic-release/github
-          extra_plugins: |
-            @semantic-release/git@10.x
-            @semantic-release/changelog@6.x
-            @commitlint/config-conventional@19.x
-            conventional-changelog-writer@8.0.1
+        run: |
+          npm i -g semantic-release@24.2 @semantic-release/git@10.x @semantic-release/changelog@6.x @commitlint/config-conventional@19.x
+          npx semantic-release --debug --dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: Semantic Release
+      #   uses: cycjimmy/semantic-release-action@0a51e81a6baff2acad3ee88f4121c589c73d0f0e # v4.2.0
+      #   with:
+      #     # dry_run: true
+      #     # "conventional-changelog-writer" is exactly installed as "cycjimmy/semantic-release-action" depends on 8.0.0, which causes errors
+      #     # plugins included in semantic-release by default:
+      #     # @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/npm @semantic-release/github
+      #     extra_plugins: |
+      #       @semantic-release/git@10.x
+      #       @semantic-release/changelog@6.x
+      #       @commitlint/config-conventional@19.x
+      #       conventional-changelog-writer@8.0.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
