--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "mongoose": "~8.13.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@deepkit/core": "1.0.1-alpha.58",
     "@deepkit/type": "1.0.1-alpha.58",
     "@types/jest": "^29.5.14",
@@ -49,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "class-transformer": "0.5.1",
+    "commitlint": "^17.8.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.4",
